--- a/CSS/index.css
+++ b/CSS/index.css
@@ -189,7 +189,51 @@ body {
     color: red;
     transition: 0.2s;
     border: none;
+    cursor: pointer;
 }
 .ThemeBtn:hover{
     color: blue;
+}
+.ThemeSelector{
+    position: absolute;
+    top: 90px;
+    left: 30px;
+    margin-top: 10px;
+    border: 0.2px solid;
+    border-collapse: collapse;
+    transition: 0.2s;
+    background-color: rgb(236, 209, 209);
+}
+.ThemeSelector button{
+    padding: 10px;
+    font-size: 22px;
+    display: inherit;
+    background-color: white;
+    cursor: pointer;
+}
+.Anim1{
+    animation: Anim1 0.6s forwards;
+}
+.Invisible{
+    visibility: hidden;
+}
+@keyframes Anim1{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+.Anim2{
+    animation: Anim2 0.6s forwards;
+}
+
+@keyframes Anim2{
+    0%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+    }
 }
